# sg-dengue-weather-model

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
config/: config.default.yaml
dashboard/: app.py
scripts/: download_daily_weather.py  download_moh_weekly_counts.py  download_ura_subzones.py
src/: app.py  cli.py
src/dengueweather/: __init__.py  config.py  logging_setup.py  paths.py  utils_geo.py  utils_time.py
src/dengueweather/ingest/: moh_weekly_cases.py  mss_weather.py  nea_live_archiver.py  sgcharts_archive.py  weather_client.py
src/dengueweather/model/: eval.py  interactions.py  panel_gbm.py  panel_logit.py
src/dengueweather/viz/: interaction_surfaces.py  lag_curves.py  maps.py
