[project]
name = "dengueweather"
version = "0.1.0"
description = "Weather–dengue spatiotemporal analysis for Singapore"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16",
  "numpy>=1.26",
  "geopandas>=1.0",
  "h3>=3.7",
  "pyproj>=3.6",
  "shapely>=2.0",
  "requests>=2.32",
  "tqdm>=4.66",
  "joblib>=1.4",
  "statsmodels>=0.14",
  "scikit-learn>=1.5",
  "pygam>=0.9.0",
  "typer>=0.12",
  "pydantic>=2.7",
  "matplotlib>=3.9",
  "beautifulsoup4>=4.12",
  "pdfplumber>=0.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "pre-commit>=3.7",
  "ipykernel>=6.29"
]

[tool.ruff]
line-length = 100